fix for top menu on mobile phones

--- a/f5_sphinx_theme/static/css/f5-theme.css
+++ b/f5_sphinx_theme/static/css/f5-theme.css
@@ -963,4 +963,9 @@ table.docutils.footnote, table.docutils.footnote > tbody, table.docutils.footnot
   #sidebar {
     max-width: 300px;
   }
+  .corp-header ul {
+    width: 90%;
+    margin: auto;
+    padding-left: 0;
+  }
 }
